--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 *.exe
 *.out
 *.app
+Sample/Project/obj/
+Sample/.vs/
+Artemis/Project/obj/
+Artemis/Library/ArtemisD.idb
+Artemis/Library/ArtemisD.pdb
+Sample/Exe/SampleD.pdb
+Artemis/.vs/
